# Streamlit-dsfr

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose-npm.yml  docker-compose.cicd.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: check.yml  publish.yml  release.yml
app/: docker-cicd-command.sh
app/app/: README.md  pyproject.toml
app/app/streamlit_dsfr/: __init__.py
app/demo/: app.py  css_font_family.py  disable_sidebar.py  nav_menu.py  requirements.txt
app/demo/pages/: 1_Font_family.py  1_Static components.py  2_Interactive components.py  2_Static components.py  3_Interactive components.py
component/: .dockerignore  Dockerfile  MANIFEST.in  docker-cicd-command.sh  docker-dev-command.sh
component/app/: README.md  __init__.py  app.py  pyproject.toml
component/app/.streamlit/: config.toml
component/app/frontend/: app.config.ts  index.html  nuxt.config.ts  package-lock.json  package.json  vite.config.ts
component/app/frontend/src/: App.vue  main.ts
component/app/frontend/src/components/: DsfrButton.vue  DsfrFooter.vue  MyComponent.vue  StreamlitComponent.vue
component/app/frontend/src/layouts/: default.vue
component/app/frontend/src/pages/: DsfrButton.vue  MyComponent.vue  dsfr_footer.vue
component/app/frontend/src/streamlit/: StreamlitVue.ts  WithStreamlitConnection.vue  index.ts
component/cicd/: MANIFEST.in  pyproject.toml
component/frontend/: astro.config.mjs  nuxt.config.ts  package.json  tsconfig.json
component/frontend/src/components/: DsfrButton.vue  DsfrFooter.vue  MyComponent.vue
frontend/: docker-dev-command.sh
frontend/app/: package-lock.json  package.json
streamlit_dsfr/: Dockerfile
streamlit_dsfr/app/: __init__.py
(+63 files in other folders)
